ags (2.2.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values for FreeBSD

ags (2.2.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values

ags (2.2.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMainLoop ::sync-counter-inc() and ::sync-counter-dec() no return type

ags (2.2.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsThreadPool make AgsReturnableThread returning
	* minor improvements added -Werror=return-type

ags (2.2.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_buffer_util_peak_*() to handle 0.0 correct
	* fixed dead-lock AgsPulseDevout provide for each buffer sub-block lock
	* fixed dead-lock AgsCoreAudioDevout provide for each buffer sub-block lock
	* fixed AgsSimpleFile audio loop start/end of AgsSyncsynth to round

ags (2.2.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored get object mutex

ags (2.2.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented lock-free soundcard buffer in ags-play recall
	* implemented ags_soundcard_get_sub_block_count()
	* implemented ags_soundcard_trylock_sub_block()
	* implemented ags_soundcard_unlock_sub_block()
	* improved AgsDevout, AgsPulseDevout, AgsJackDevout and AgsCoreAudioDevout

ags (2.2.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_audio_buffer_util.c to support builtin vector functions
	* fixed ags_char_buffer_util.c

ags (2.2.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV as open file

ags (2.2.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed relative counters and time fraction issues
	* improved replacing hard-coded font
	* refactored AgsDial to use PangoLayout
	* refactored AgsLevel to use PangoLayout
	* refactored AgsScale to use PangoLayout