@@ -1,3 +1,9 @@
+ags (2.2.33)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed memory-leaks in ags_turtle.c
+	* fixed memory-leaks in ags_lv2_turtle_parser.c
+
 ags (2.2.32)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
